@@ -11,4 +11,4 @@ RESTRICT=bindist mirror strip
 SLOT=0
 SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_34.0.1788.0-1_amd64.deb http://dev.gentoo.org/~floppym/dist/libgcrypt.so.11.8.2-amd64.xz ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_34.0.1788.0-1_i386.deb http://dev.gentoo.org/~floppym/dist/libgcrypt.so.11.8.2-x86.xz )
 _eclasses_=chromium	4a9f555199b35aa57f60b0e9b9627d2a	eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	04385b0f181c42fa9c18ec0e31729d1f	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=381edfbcf42e657f153293e0663f3c43
+_md5_=396ed65b0155e8b054e28683858923ac
