@@ -5,13 +5,13 @@ DIST google-chrome-unstable_34.0.1788.0-1_amd64.deb 47538220 SHA256 67b1df8e2bf0
 DIST google-chrome-unstable_34.0.1788.0-1_i386.deb 47846906 SHA256 8e0c0923c4c077236f989ae3263526eb77dc2798ddcb8d30884873347ec5a9e9 SHA512 b475e33a23b042fc02230c12eaed32ee28cce88177334ab2d5f0be65cd8016d9c283524f37f83b22ecd6d53e6324b767cbd35146a058fa633d508ee481b6926e WHIRLPOOL 48fdb94f29251b5dc6a6b3c7667548feebd02546d4ec5d743f2ae8ced91459161fe80b198a03f4667a65891327f10129bb60a97160377e6d77d4bb463cebfbec
 DIST libgcrypt.so.11.8.2-amd64.xz 211916 SHA256 b83ef0cae62318f1c60c464daf8cfd77c35e4d931d8be79490098cc494ba2c00 SHA512 d350c0e78185b142434cd26887eebdf3d836e2e3e2c4114c5571f0f4f23daebb65875195779c95b3b8ca88a77bfa01009cb1e08bc79b45705978dae70bd4f03f WHIRLPOOL 4e1f9b55765a2c40e54e79d0c7ab53645fbc25417bde2d511f91858d068fd8cba83eb76ca716e2a51dc4c2ed3d887e55f53391c3a38edc9fb6e18c6ac420117e
 DIST libgcrypt.so.11.8.2-x86.xz 210568 SHA256 cc3223c2edc6ed9c1fca7a198c0444d752685553319245618252594c01958049 SHA512 3ae308c0842f7d188c73933d9ab52cb3186310eb7225b9bbaee05596b70431c8ab52d1723611a7db51d5d9e4e3ec9b9f69836ce0f4b394f9b3ec148da82b1176 WHIRLPOOL 4b34cd97a5925dc54e5fa4d42d447e490ae2334efec6d25822095c7869b7bdf89c64cc9a43ff7440955e49300c0e2a69f73137c0f2c44cbf7aa9babf6679708f
-EBUILD google-chrome-unstable-34.0.1788.0_p1.ebuild 4830 SHA256 e5a867dd9cb46a3dff56f6318d4cc3e3e813ef6b1b8798d4c533bcc0dca8c4ba SHA512 c6b7160593b4bd2268c83cfba8209fe9a460b25acd1605460b538ac4ef4cfded2d060eaa9fe61b3f3b4e5e83f741840c40c2aeca52353f3214cc24954c995b51 WHIRLPOOL 2ea42b6314887e229c31a7f1ff796e00b58983a8ca9603334639da79fbaf20f8a99f1ebf16635506491cd00f97d62eb7f6c8a60c52d73ad8845d5259f8f9b89c
-MISC ChangeLog 475 SHA256 288799f8209c7fe28bbff40189ffcaa4a96fda7fa1c03e6f65327f0cc680472b SHA512 7a3fd2295da479910e07c951041af168e3176a2679b591834def3f0a8eeb1a08c7c4f3f33b7af0037840c58576c478d5bd8af3c9691384a0db0b4320f5cc16f2 WHIRLPOOL 654e04f5c52d86ad3f9433259ff2b34e78f96398a476f4a4e93a624e73f8fe7e15c240a7d8f4131560b38a8eca76ec1256dc0e246671c65238736f713ab4d307
+EBUILD google-chrome-unstable-34.0.1788.0_p1.ebuild 4788 SHA256 213022a61cfcabc555910b87d48334b97918e4b018d8fb936064ca77a0016173 SHA512 93db5d64f933bac0c34d90abd0f92d5a3ae8902eb7f06743d59dc4ab198e944cb0943c58a31c0d537287cb163cc4a95cb46b1e3180cfa2a78cbecb9f09072c2b WHIRLPOOL 4b22978671d409cc21e8df375b8d2b25b13842c4ab6321e6f93b54d753ce153e0fc17d693e9e66aece82d7689fe9f008ad01ea233c9dbdf57fbcd3e884482c74
+MISC ChangeLog 591 SHA256 ecdee8b6c503c3f459446d8edfe37c36d721beb19193fe4886a2590bf3f1e564 SHA512 801a04f1ab5972b56831d903f29beeb53757b13f3af490c09144b153d68d756e84f884bb55321c47f2184d6462a1634c1082347a2e11b87da32ab7b54b57c6f4 WHIRLPOOL 8fd2460e5c02870e440f046da6679724e607a1362fc5ecbd1426852dff7a772c7a661ac72d8e5514856732fc3315f9ea061bb30914e043b994d58465f37e5b59
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlLbHK8ACgkQC77qH+pIQ6Qv7QEAquPAuobEignZnXq61gTcGs8p
-sfey6t1HkJAXqs/SBxQA/j9Gtp7jCFqFN2P5dfo+K/QeiYeSPKr/bPWLo+zWXsur
-=DhmM
+iF4EAREIAAYFAlLbHRUACgkQC77qH+pIQ6T9IwEAn5SZrF+fUWgRHjmM3mu/RqbB
+dbL37hTV2ulCEjpYwL4A/3d3KhelXdSwP0jazNhYF6wRuTAQJGUuQhWsm1VnGCKb
+=UYhK
 -----END PGP SIGNATURE-----
