@@ -1,6 +1,10 @@
 # ChangeLog for www-client/google-chrome-unstable
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.1 2014/01/19 00:30:38 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.2 2014/01/19 00:32:19 floppym Exp $
+
+  19 Jan 2014; Mike Gilbert <floppym@gentoo.org>
+  google-chrome-unstable-34.0.1788.0_p1.ebuild:
+  Fix whitespace.
 
 *google-chrome-unstable-34.0.1788.0_p1 (19 Jan 2014)
 
