@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8546 2014/01/18 14:22:08 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8547 2014/01/19 00:33:02 floppym Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  19 Jan 2014; Mike Gilbert <floppym@gentoo.org> package.mask:
+  Mask current google-chrome slots, bug 498306.
 
   18 Jan 2014; Eray Aslan <eras@gentoo.org> package.mask:
   Unmask mail-mta/postfix-2.11 and mask mail-mta/postfix-2.12
